pkg/plugins/policies/meshtls/plugin/v1alpha1/testdata/no-workload-identity.listeners.golden.yaml
resources:
- name: self_inbound_dp_17777
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 17777
    enableReusePort: true
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            name: self_inbound_dp_17777
            requestHeadersToRemove:
            - x-kuma-tags
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: self_inbound_dp_17777
              routes:
              - match:
                  prefix: /
                route:
                  cluster: self_inbound_dp_17777
                  timeout: 0s
          statPrefix: self_inbound_dp_17777
    name: self_inbound_dp_17777
    trafficDirection: INBOUND
- name: self_inbound_dp_17778
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 17778
    enableReusePort: true
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: self_inbound_dp_17778
          statPrefix: self_inbound_dp_17778
    name: self_inbound_dp_17778
    trafficDirection: INBOUND
